all pawns movable

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="item">Singapore</div>
         <div class="item corner-item">Start</div>
       </div>
-      <div class="dies" onclick="movePawn()">
+      <div class="dies" onclick="moveGreen()">
         <div class="dice" id="dice">
           <div class="dice-face" id="dice-face">
             <div class="dot"></div>
