--- a/index.html
+++ b/index.html
@@ -11,50 +11,461 @@
   <body>
     <div class="container">
       <div class="top">
-        <div class="item corner-item">Party House</div>
-        <div class="item">Italy</div>
-        <div class="item">Chance</div>
-        <div class="item">Brazil</div>
-        <div class="item">Switzerland</div>
-        <div class="item">Boston City</div>
-        <div class="item">Airways</div>
-        <div class="item">Germany</div>
-        <div class="item">Canada</div>
-        <div class="item corner-item">Resort</div>
+        <div class="item corner-item">
+          <h3>-$500</h3>
+          <p>Party House</p>
+        </div>
+        <div class="item c-red">
+          <h3>$2,500</h3>
+          <p>France</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-other">
+          <p>Chance</p>
+        </div>
+        <div class="item c-yellow">
+          <h3>$2,500</h3>
+          <p>Brazil</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-red">
+          <h3>$3,500</h3>
+          <p>Switzerland</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-other">
+          <p>Boston City</p>
+        </div>
+        <div class="item c-silver">
+          <h3>$10,500</h3>
+          <p>Airways</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-red">
+          <h3>$3,500</h3>
+          <p>Germany</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-yellow">
+          <h3>$4,000</h3>
+          <p>Canada</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item corner-item c-corner">
+          <h3>+$500</h3>
+          <p>Resort</p>
+        </div>
       </div>
       <div class="right-left">
         <div class="left">
-          <div class="item">Japan</div>
-          <div class="item">USA</div>
-          <div class="item">Travelling</div>
-          <div class="item">Roadways</div>
-          <div class="item">Mexico</div>
-          <div class="item">Hongcong</div>
-          <div class="item">UNO</div>
-          <div class="item">Australia</div>
+          <div class="item c-blue">
+            <h3>$2,500</h3>
+            <p>Japan</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-yellow">
+            <h3>$8,500</h3>
+            <p>USA</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-other">
+            <p>Travelling</p>
+          </div>
+          <div class="item c-silver">
+            <h3>$3,500</h3>
+            <p>Roadways</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-yellow">
+            <h3>$4,000</h3>
+            <p>Mexico</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-blue">
+            <h3>$2,000</h3>
+            <p>Hongcong</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-other">
+            <p>UNO</p>
+          </div>
+          <div class="item c-yellow">
+            <h3>$3,300</h3>
+            <p>Australia</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="right">
-          <div class="item">Egypt</div>
-          <div class="item">Satellite</div>
-          <div class="item">Iran</div>
-          <div class="item">France</div>
-          <div class="item">UNO</div>
-          <div class="item">Waterways</div>
-          <div class="item">Iraq</div>
-          <div class="item">England</div>
+          <div class="item c-green">
+            <h3>$3,200</h3>
+            <p>Egypt</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-silver">
+            <h3>$2,000</h3>
+            <p>Satellite</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-green">
+            <h3>$2,500</h3>
+            <p>Iran</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-red">
+            <h3>$2,500</h3>
+            <p>France</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-other">
+            <p>UNO</p>
+          </div>
+          <div class="item c-silver">
+            <h3>$9,500</h3>
+            <p>Waterways</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-green">
+            <h3>$5,000</h3>
+            <p>Iraq</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
+          <div class="item c-red">
+            <h3>$2,500</h3>
+            <p>England</p>
+            <div class="item-details">
+              <h3 class="title">France</h3>
+              <p class="price">$2,500</p>
+              <div class="rent-details">
+                <p><b>Rent: </b>$150</p>
+                <p><b>1 House </b>$300</p>
+                <p><b>2 House: </b>$450</p>
+                <p><b>3 House: </b>$600</p>
+                <p><b>Hotel: </b>$1,000</p>
+                <p><b>Mortage value: </b>$1,500</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="bottom">
-        <div class="item corner-item">Jail</div>
-        <div class="item">India</div>
-        <div class="item">Chance</div>
-        <div class="item">Saudi Arabia</div>
-        <div class="item">Petroleum</div>
-        <div class="item">China</div>
-        <div class="item">Railways</div>
-        <div class="item">Malasia</div>
-        <div class="item">Singapore</div>
-        <div class="item corner-item">Start</div>
+        <div class="item corner-item c-corner">
+          <h3>-$500</h3>
+          <p>Jail</p>
+        </div>
+        <div class="item c-blue">
+          <h3>$5,500</h3>
+          <p>India</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-other">
+          <p>Chance</p>
+        </div>
+        <div class="item c-green">
+          <h3>$5,500</h3>
+          <p>Saudi Arabia</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-silver">
+          <h3>$5,500</h3>
+          <p>Petroleum</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-blue">
+          <h3>$4,500</h3>
+          <p>China</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-silver">
+          <h3>$9,500</h3>
+          <p>Railways</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-green">
+          <h3>$1,500</h3>
+          <p>Malasia</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item c-blue">
+          <h3>$3,000</h3>
+          <p>Singapore</p>
+          <div class="item-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+        </div>
+        <div class="item corner-item c-corner">Start</div>
       </div>
       <div class="dies" onclick="start()">
         <div class="dice" id="dice">
