--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <div id="pawn-green" class="pawn pawn-green"></div>
       </div>
     </div>
-
+    <script src="/country.js"></script>
     <script src="/script.js"></script>
   </body>
 </html>
