--- a/rough.html
+++ b/rough.html
@@ -5,77 +5,93 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Rollable Dice</title>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-      }
-
-      .dice {
-        width: 50px;
-        height: 50px;
-        background: crimson;
-        color: #fff;
-        border-radius: 4px;
-        font-family: Roboto, sans-serif;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 48px;
-      }
-
-      .dice-face {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        width: 80%;
-        height: 80%;
-      }
-
-      .dot {
-        width: 30%;
-        height: 30%;
-        background: white;
-        border-radius: 50%;
-        margin: 10% auto;
-      }
-
-      button {
-        margin-top: 20px;
-      }
-    </style>
+    <title>International Business</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <div class="dice" id="dice" onclick="rollDice()">
-      <div class="dice-face" id="dice-face">
-        <div class="dot"></div>
+    <div class="container">
+      <div id="top-container" class="top">
+        <!-- Countries with position 'top' will be dynamically added here -->
+      </div>
+      <div id="left-container" class="left">
+        <!-- Countries with position 'left' will be dynamically added here -->
+      </div>
+      <div id="right-container" class="right">
+        <!-- Countries with position 'right' will be dynamically added here -->
+      </div>
+      <div id="bottom-container" class="bottom">
+        <!-- Countries with position 'bottom' will be dynamically added here -->
       </div>
     </div>
+
+    <script src="/country.js"></script>
     <script>
-      function rollDice() {
-        const dice = document.getElementById("dice");
-        const diceFace = document.getElementById("dice-face");
+      // Filter countries based on their position
+      const topCountries = countries.filter(
+        (country) => country.position === "top"
+      );
+      const leftCountries = countries.filter(
+        (country) => country.position === "left"
+      );
+      const rightCountries = countries.filter(
+        (country) => country.position === "right"
+      );
+      const bottomCountries = countries.filter(
+        (country) => country.position === "bottom"
+      );
 
-        // Remove previous dots
-        diceFace.innerHTML = "";
+      // Function to create country elements
+      const createCountryElement = (country) => {
+        const countryDiv = document.createElement("div");
+        countryDiv.classList.add("item", `c-${country.color}`);
 
-        // Generate a random number between 1 and 6 for the dice roll
-        const rollResult = Math.floor(Math.random() * 6) + 1;
-        const count = 0;
-        // Add the appropriate number of dots based on the roll result
-        for (let i = 0; i < rollResult; i++) {
-          const dot = document.createElement("div");
-          dot.classList.add("dot");
-          diceFace.appendChild(dot);
-          count++;
-        }
-      }
+        const countryImageDiv = document.createElement("div");
+        countryImageDiv.classList.add("item-image");
+        countryImageDiv.innerHTML = `<img src="${country.image}" alt="${country.name}" />`;
+
+        const countryDetailsDiv = document.createElement("div");
+        countryDetailsDiv.classList.add("item-details");
+
+        const h3 = document.createElement("h3");
+        h3.textContent = `$${country.price}`;
+
+        const p = document.createElement("p");
+        p.textContent = country.name;
+
+        countryDetailsDiv.appendChild(h3);
+        countryDetailsDiv.appendChild(p);
+        countryDiv.appendChild(countryImageDiv);
+        countryDiv.appendChild(countryDetailsDiv);
+
+        return countryDiv;
+      };
+
+      // Get the containers
+      const topContainer = document.getElementById("top-container");
+      const leftContainer = document.getElementById("left-container");
+      const rightContainer = document.getElementById("right-container");
+      const bottomContainer = document.getElementById("bottom-container");
+
+      // Iterate over the countries and create elements dynamically for each position
+      topCountries.forEach((country) => {
+        const countryDiv = createCountryElement(country);
+        topContainer.appendChild(countryDiv);
+      });
+
+      leftCountries.forEach((country) => {
+        const countryDiv = createCountryElement(country);
+        leftContainer.appendChild(countryDiv);
+      });
+
+      rightCountries.forEach((country) => {
+        const countryDiv = createCountryElement(country);
+        rightContainer.appendChild(countryDiv);
+      });
+
+      bottomCountries.forEach((country) => {
+        const countryDiv = createCountryElement(country);
+        bottomContainer.appendChild(countryDiv);
+      });
     </script>
   </body>
 </html>
