--- a/index.html
+++ b/index.html
@@ -486,6 +486,16 @@
         <div id="pawn-green" class="pawn pawn-green"></div>
       </div>
     </div>
+    <script>
+      window.addEventListener("beforeunload", (event) => {
+        // Cancel the event to prevent the page from reloading immediately
+        event.preventDefault();
+
+        // Display a confirmation message
+        event.returnValue =
+          "Are you sure you want to leave? Your progress will be lost.";
+      });
+    </script>
     <script src="/country.js"></script>
     <script src="/script.js"></script>
   </body>
