--- a/index.html
+++ b/index.html
@@ -485,8 +485,60 @@
         ></div>
         <div id="pawn-green" class="pawn pawn-green"></div>
       </div>
+
+      <div
+        class="ticket-purchase-popup-container"
+        id="ticket-purchase-popup-container"
+      >
+        <div class="ticket-purchase-popup" id="ticket-purchase-popup">
+          <div class="ticket-details">
+            <h3 class="title">France</h3>
+            <p class="price">$2,500</p>
+            <div class="rent-details">
+              <p><b>Rent: </b>$150</p>
+              <p><b>1 House </b>$300</p>
+              <p><b>2 House: </b>$450</p>
+              <p><b>3 House: </b>$600</p>
+              <p><b>Hotel: </b>$1,000</p>
+              <p><b>Mortage value: </b>$1,500</p>
+            </div>
+          </div>
+          <div class="purchase-btns">
+            <button class="btn btn-primary" onclick="purchaseTicket()">
+              Buy
+            </button>
+            <button class="btn btn-secondary" onclick="closeTicketPopup()">
+              Cancel
+            </button>
+          </div>
+        </div>
+
+        <div class="player-details">
+          <div class="player player-red">
+            <div class="player-color"></div>
+            <h2 class="player-money">$25,000</h2>
+            <p class="player-name">Player 1</p>
+          </div>
+          <div class="player player-blue">
+            <div class="player-color"></div>
+            <h2 class="player-money">$25,000</h2>
+            <p class="player-name">Player 2</p>
+          </div>
+          <div class="player player-yellow">
+            <div class="player-color"></div>
+            <h2 class="player-money">$25,000</h2>
+            <p class="player-name">Player 3</p>
+          </div>
+          <div class="player player-green">
+            <div class="player-color"></div>
+            <h2 class="player-money">$25,000</h2>
+            <p class="player-name">Player 4</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <script>
+
+    <!-- <script>
       window.addEventListener("beforeunload", (event) => {
         // Cancel the event to prevent the page from reloading immediately
         event.preventDefault();
@@ -495,8 +547,9 @@
         event.returnValue =
           "Are you sure you want to leave? Your progress will be lost.";
       });
-    </script>
+    </script> -->
     <script src="/country.js"></script>
+    <script src="/ticket.js"></script>
     <script src="/script.js"></script>
   </body>
 </html>
